syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.kerala.core.server.cluster";

import "client-service.proto";

service KeralaClusterService {
    rpc KeralaAppendEntries (KeralaAppendEntriesRequest) returns (KeralaAppendEntriesResponse) {}
    rpc KeralaRequestVote (KeralaRequestVoteRequest) returns (KeralaRequestVoteResponse) {}
}

message KeralaAppendEntriesRequest {
    uint32 term = 1;
    string topicId = 2;
    string leaderId = 3;
    uint64 prevLogIndex = 4;
    uint32 prevLogTerm = 5;
    repeated KeralaEntry entries = 6;
    uint64 leaderCommit = 7;
}

message KeralaAppendEntriesResponse {
    uint32 term = 1;
    bool success = 2;
    uint64 prevLogIndex = 3;
}

message KeralaEntry {
    string uuid = 1;
    uint32 term = 2;
    string topic = 3;
    repeated KeralaKV kv = 4;
}

message KeralaRequestVoteRequest {
    uint32 term = 1;
    string candidateId = 2;
    repeated KeralaLogTail logTails = 3;
}

message KeralaLogTail {
    string topicId = 1;
    uint64 lastLogIndex = 2;
    uint32 lastLogTerm = 3;
}

message KeralaRequestVoteResponse {
    uint32 term = 1;
    bool voteGranted = 2;
}
